# platform-eng-leader-claude-config

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .superclaude-metadata.json  BASH_TO_PYTHON_MIGRATION_PLAN.md  CLAUDE.md  COMMANDS.md  COST-OPTIMIZATION.md  CURSOR_CONTEXT.md  CURSOR_SETUP.md  FLAGS.md  INTELLIGENT_HOOKS_DEMO.md  MCP.md  MEETING_INTELLIGENCE_GUIDE.md  MEMORY.md  MIGRATION_GUIDE.md  MODEL-SELECTION.md  ORCHESTRATOR.md  PERSONAS.md  PRINCIPLES.md  README.md  README_OLD.md  RULES.md  SETUP-AUTOMATION.md  SETUP-PROCORE-JIRA.md  SETUP-WEEKLY-REPORT.md  STRATEGIC-TOOLS.md  SYNC.md  VERIFY-GLOBAL-SETUP.md  claudedirector  generate-monthly-report-claude.sh  generate-weekly-report-claude.sh  generate-weekly-report.sh  jira-integration-spec.md  phase-3-roadmap.md  setup-smart-git.sh  setup.sh  setup_smart_git.py  (+7 more)
archive/bash-tools/: generate-weekly-report-claude.sh
claudedirector_pkg/: README.md  pyproject.toml
claudedirector_pkg/claudedirector/: __init__.py  benchmark.py  cli.py
commands/: memory-enhanced-commands.sh
commands/sc/: align-stakeholders.md  assess-org.md  justify-investment.md  prepare-board.md  prepare-slt.md
docs/: README.md  atlassian-reporting-guide.md  memory-enhanced-commands.sh
docs/development/: MIGRATION_GUIDE.md  commit-readiness-assessment.md
docs/features/: intelligent-git-hooks.md
docs/strategic/: usage-validation-framework.md
framework/: CLAUDE.md  COMMANDS.md  COST-OPTIMIZATION.md  ENHANCED-COMMANDS.md  FLAGS.md  MCP.md  MEMORY.md  MODEL-SELECTION.md  MODES.md  ORCHESTRATOR.md  PERSONAS.md  PRINCIPLES.md  RULES.md
guides/: atlassian-reporting-guide.md  confluence-monthly-report-template.md
lib/: README.md  pyproject.toml
lib/claudedirector/: __init__.py  benchmark.py  cli.py
lib/claudedirector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lib/claudedirector/core/: __init__.py  config.py  database.py  exceptions.py  types.py
lib/claudedirector/intelligence/: __init__.py  meeting.py  stakeholder.py  task.py
lib/claudedirector/utils/: __init__.py  cache.py  memory.py  parallel.py
memory/: enhanced_schema.sql  intelligent_stakeholder_detector.py  intelligent_task_detector.py  local_stakeholder_ai.py  meeting_intelligence.py  memory_manager.py  schema.sql  stakeholder_engagement_engine.py  stakeholder_engagement_schema.sql  task_tracking_schema.sql  workspace_monitor.py
scripts/daily/: daily_stakeholder_alerts.py  daily_task_alerts.py
scripts/setup/: setup_meeting_intelligence.py  setup_task_tracking.py
strategic_integration_service/: .coverage  .flake8  .pre-commit-config.yaml  =3.1.0  README.md  env.example  pyproject.toml  requirements.txt  setup_git_hooks.sh
strategic_integration_service/config/: development.yaml
strategic_integration_service/strategic_integration_service/: __init__.py
strategic_integration_service/strategic_integration_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
strategic_integration_service/strategic_integration_service/core/: __init__.py  authentication.py  config.py  exceptions.py
strategic_integration_service/strategic_integration_service/extractors/: __init__.py  base_extractor.py  current_initiatives.py  l2_initiatives.py  memory_optimized_extractor.py  performance_l2_initiatives.py
strategic_integration_service/strategic_integration_service/generators/: __init__.py  base_generator.py  monthly_report.py  weekly_report.py
strategic_integration_service/strategic_integration_service/hooks/: __init__.py  critical_linting.py  intelligent_hook_filter.py  pii_scanner.py  strategic_validator.py  test_runner.py
strategic_integration_service/strategic_integration_service/models/: __init__.py  initiative.py  report.py
strategic_integration_service/strategic_integration_service/scripts/: extract_current_initiatives.py  extract_l2_initiatives.py  generate_monthly_report.py  generate_weekly_report.py  performance_benchmark.py
strategic_integration_service/strategic_integration_service/templates/: monthly-pi-template.md  weekly-slt-template.md
strategic_integration_service/strategic_integration_service/utils/: __init__.py  cache.py  jira_client.py  markdown_utils.py  memory_optimization.py  performance_benchmark.py  performance_jira_client.py  template_engine.py  validation.py
strategic_integration_service/tests/: __init__.py
strategic_integration_service/tests/integration/: test_jira_integration.py
strategic_integration_service/tests/unit/: test_current_initiatives_extractor.py  test_l2_extractor.py  test_weekly_report_generator.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli_commands.py  test_database_operations.py
tests/performance/: __init__.py  test_performance_regression.py
tests/strategic/: test_usage_patterns.py
tests/unit/: test_config.py  (+4 more)
tools/: README.md  extract-l2-strategic-initiatives.sh  generate-monthly-report-claude.sh  generate-weekly-report-claude.sh  setup-jira-token.sh  setup.sh  sync-claude-config.sh
workspace/: README.md
(+26 files in other folders)
