[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudedirector"
version = "1.0.0"
description = "Strategic Leadership AI Framework for Engineering Directors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ClaudeDirector Team", email = "team@claudedirector.dev"}
]
keywords = ["ai", "leadership", "strategic", "management", "engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "structlog>=22.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
pydantic = [
    "pydantic>=2.0.0",
]
performance = [
    "psutil>=5.0.0",
    "aiofiles>=22.0.0",
]
all = [
    "claudedirector[dev,pydantic,performance]"
]

[project.scripts]
claudedirector = "claudedirector.cli:main"

[project.urls]
Homepage = "https://github.com/chriscantu/claudedirector"
Documentation = "https://claudedirector.readthedocs.io"
Repository = "https://github.com/chriscantu/claudedirector.git"
Issues = "https://github.com/chriscantu/claudedirector/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudedirector*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=claudedirector --cov-report=html --cov-report=term-missing"
